--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,21 @@
 <html>
 <head>
-<title>Petal Labs</title>
-
+   <meta charset="utf-8" />
+    <title>Petal Labs</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
 </head>
 <body>
+    <div id="content"></div>
+    <script type="text/babel">
+
+    </script>
 Welcome to Joy 0.4
+
+<!-- integrate with intercom.io -->
 <script>
   window.intercomSettings = {
     app_id: "mhjvz49d"
