move react script to a file.

--- a/static/react.html
+++ b/static/react.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div id = "container"></div>
+    <div id = "container2">to be replaced</div>
+    <script type="text/babel" src="/static/scripts/example.js"></script>
     <script type="text/babel"> 
         var ParentComponent = React.createClass({
             performMagic: function() {
